--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
   provider: ^6.0.2
+  syncfusion_flutter_charts: 19.4.56
 
 dev_dependencies:
   flutter_test:
